<resources>
    <string name="app_name">Code Scanner</string>
    <string name="login_code">Enter Login Code</string>
    <string name="enter_your_pass">Enter Password</string>
    <string name="login">Login</string>
    <string name="no_file_found">No Files Found .. Start Adding Now</string>
    <string name="no_items_found">No Items Found .. Start Scanning !</string>
    <string name="str_save_lbl">Save All</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="remember_me">Remember Me</string>
    <string name="user_code">user code</string>
    <string name="user_pass">user password</string>
    <string name="user_name">user name</string>
    <string name="str_settings">Settings</string>
    <string name="delete_all">Delete All</string>
    <string name="log_out">log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="create_excel_file">Create Excel File</string>
    <string name="cancel">Cancel</string>
    <string name="delete_file_warning">File Will Be Deleted Permanently .. Delete File Any Way ?</string>
    <string name="delete_all_files_warning">Are You Sure You Want To Delete Al Files ?</string>
    <string name="remember_me_key">remember_me</string>
    <string name="close">Close</string>
    <string name="str_save">Save</string>
    <string name="file_name">File Name : </string>
    <string name="created_date">Created Date :</string>
    <string name="created_time">"Created Time : "</string>
    <string name="create_file">Create File</string>
    <string name="file_name_lbl">Add File Name</string>
    <string name="user_info">Edit User Info</string>
    <string name="send_via">Send Via</string>
    <string name="edit_info">Edit User Info</string>
</resources>