<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/gradient_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="true">

<!--            <ImageView-->
<!--                android:id="@+id/logo_img"-->
<!--                android:layout_width="@dimen/_60sdp"-->
<!--                android:layout_height="@dimen/_40sdp"-->
<!--                android:visibility="visible"-->
<!--                android:src="@drawable/logo2"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:background="@drawable/_et_bg_primary"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="italic"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="sans-serif-black"
                style="@android:style/TextAppearance.Material.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/login_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="?actionBarSize"
                android:layout_marginTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:visibility="gone"
                app:cardCornerRadius="18dp"
                app:cardElevation="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_name">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_email_container"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_code"
                        android:padding="@dimen/_2sdp"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                        app:boxCornerRadiusTopStart="@dimen/_8sdp"
                        app:boxStrokeColor="@color/purple_700"
                        app:boxStrokeWidth="1dp"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_login_sales_man_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_password_container"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_pass"
                        android:padding="@dimen/_2sdp"
                        android:textColorHint="@color/black"
                        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
                        app:boxCornerRadiusTopStart="@dimen/_8sdp"
                        app:boxStrokeColor="@color/purple_700"
                        app:boxStrokeWidth="1dp"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login_email_container"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTintMode="@color/purple_700">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_login_sales_man_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/remember_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/remember_me"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:backgroundTint="@color/purple_700"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/login_password_container" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>