<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_4sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/_et_bg_primary"
            android:orientation="horizontal"
            android:padding="@dimen/_4sdp">

            <TextView
                android:id="@+id/file_name_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_8sdp"
                app:drawableStartCompat="@drawable/ic_file_24"
                android:drawablePadding="@dimen/_8sdp"
                app:drawableTint="@color/primary_dark"
                android:textStyle="bold"
                android:textColor="@color/primary_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/file_date_lbl"
                android:text="@string/file_name" />

            <TextView
                android:id="@+id/file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:gravity="center"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:paddingStart="@dimen/_65sdp"
                android:paddingEnd="@dimen/_65sdp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_4sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/position"
                app:layout_constraintStart_toEndOf="@id/file_name_lbl"
                app:layout_constraintTop_toTopOf="@id/file_name_lbl"
                app:layout_constraintBottom_toBottomOf="@id/file_name_lbl"
                tools:text="Created Date" />

            <TextView
                android:id="@+id/file_date_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_8sdp"
                app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="@dimen/_8sdp"
                app:drawableTint="@color/primary_dark"
                android:textStyle="bold"
                android:textColor="@color/primary_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/file_name"
                app:layout_constraintBottom_toTopOf="@id/file_time_lbl"
                android:text="@string/created_date" />

            <TextView
                android:id="@+id/file_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_4sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/file_name"
                app:layout_constraintEnd_toEndOf="@id/file_name"
                app:layout_constraintTop_toTopOf="@id/file_date_lbl"
                app:layout_constraintBottom_toBottomOf="@id/file_date_lbl"
                tools:text="Created Date" />

            <TextView
                android:id="@+id/file_time_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_8sdp"
                app:drawableStartCompat="@drawable/ic_time_24"
                android:drawablePadding="@dimen/_8sdp"
                app:drawableTint="@color/primary_dark"
                android:textStyle="bold"
                android:textColor="@color/primary_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/file_date_lbl"
                app:layout_constraintBottom_toTopOf="@id/linear"
                android:text="@string/created_time" />

            <TextView
                android:id="@+id/file_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_4sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/file_name"
                app:layout_constraintEnd_toEndOf="@id/file_name"
                app:layout_constraintTop_toTopOf="@id/file_time_lbl"
                app:layout_constraintBottom_toBottomOf="@id/file_time_lbl"
                tools:text="Created Date" />

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/_et_bg_primary"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/file_date"
                app:layout_constraintBottom_toBottomOf="@id/file_date"
                tools:text="50" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/_et_bg_primary"
                android:orientation="horizontal"
                android:padding="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/file_time_lbl">

                <TextView
                    android:id="@+id/delete_item"
                    android:layout_width="0dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/delete"
                    app:drawableEndCompat="@drawable/ic_baseline_delete_forever_red_24" />

                <TextView
                    android:id="@+id/export"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/export"
                    app:drawableTint="@color/color_dark_green"
                    app:drawableEndCompat="@drawable/ic_export" />

                <TextView
                    android:id="@+id/share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@string/send_via"
                    app:drawableEndCompat="@drawable/ic_whatsapp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>